--- a/index.html
+++ b/index.html
@@ -1,33 +1,75 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Your Name | Portfolio</title>
+  <meta charset="utf-8">
+  <title>Cameron Morrell | Finance Student</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="index.html">Your Name</a>
-    <ul class="navbar-nav ms-auto">
-      <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-      <li class="nav-item"><a class="nav-link" href="scratch.html">Scratch Page</a></li>
-      <li class="nav-item"><a class="nav-link" href="app.html">Web App</a></li>
-    </ul>
+    <a class="navbar-brand" href="index.html">Cameron Morrell</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="nav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="resume.html">Résumé</a></li>
+        <li class="nav-item"><a class="nav-link" href="scratch/index.html">Scratch Page</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 
-<header class="bg-primary text-white text-center p-5">
-  <h1>Welcome to My Professional Portfolio</h1>
-  <p>Student | Developer | Analyst</p>
+<header class="bg-light py-5">
+  <div class="container">
+    <h1 class="fw-bold">Finance Student | Future Law Degree</h1>
+    <p class="lead">
+      Brigham Young University finance major with professional experience at Azuria,
+      Home Depot, and Layton City. Strong interest in analytics, fitness, and soccer.
+    </p>
+    <a class="btn btn-primary" href="resume.html">View Résumé</a>
+    <a class="btn btn-outline-primary ms-2" href="scratch/index.html">Scratch Page</a>
+  </div>
 </header>
 
-<section class="container mt-4">
-  <h2>About Me</h2>
-  <p>This website showcases my web development work, resume, and interactive projects.</p>
+<section class="container py-5">
+  <div class="row g-4">
+    <div class="col-md-4">
+      <div class="card h-100 shadow-sm">
+        <div class="card-body">
+          <h5>Professional Focus</h5>
+          <p>Finance, analytics, and business problem solving.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card h-100 shadow-sm">
+        <div class="card-body">
+          <h5>Experience</h5>
+          <p>Corporate, retail, and public-sector roles.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card h-100 shadow-sm">
+        <div class="card-body">
+          <h5>Technical Skills</h5>
+          <p>Excel, SQL, Tableau, HTML, CSS, JavaScript.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
+<footer class="bg-dark text-white py-3 text-center">
+  © 2025 Cameron Morrell
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
