--- a/index.html
+++ b/index.html
@@ -5,71 +5,88 @@
   <title>Cameron Morrell | Finance Student</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
+<!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="index.html">Cameron Morrell</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="nav">
+
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="resume.html">Résumé</a></li>
-        <li class="nav-item"><a class="nav-link" href="scratch/index.html">Scratch Page</a></li>
+        <li class="nav-item">
+          <a class="nav-link active" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="resume.html">Résumé</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="scratch/index.html">Scratch Page</a>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
 
+<!-- HERO -->
 <header class="bg-light py-5">
-  <div class="container">
+  <div class="container text-center">
     <h1 class="fw-bold">Finance Student | Future Law Degree</h1>
-    <p class="lead">
+    <p class="lead mt-3">
       Brigham Young University finance major with professional experience at Azuria,
       Home Depot, and Layton City. Strong interest in analytics, fitness, and soccer.
     </p>
-    <a class="btn btn-primary" href="resume.html">View Résumé</a>
-    <a class="btn btn-outline-primary ms-2" href="scratch/index.html">Scratch Page</a>
+    <a class="btn btn-primary mt-2" href="resume.html">View Résumé</a>
+    <a class="btn btn-outline-primary mt-2 ms-2" href="scratch/index.html">Scratch Page</a>
   </div>
 </header>
 
+<!-- CONTENT -->
 <section class="container py-5">
   <div class="row g-4">
     <div class="col-md-4">
       <div class="card h-100 shadow-sm">
-        <div class="card-body">
-          <h5>Professional Focus</h5>
-          <p>Finance, analytics, and business problem solving.</p>
+        <div class="card-body text-center">
+          <h5 class="card-title">Professional Focus</h5>
+          <p class="card-text">Finance, analytics, and business problem solving.</p>
         </div>
       </div>
     </div>
+
     <div class="col-md-4">
       <div class="card h-100 shadow-sm">
-        <div class="card-body">
-          <h5>Experience</h5>
-          <p>Corporate, retail, and public-sector roles.</p>
+        <div class="card-body text-center">
+          <h5 class="card-title">Experience</h5>
+          <p class="card-text">Corporate, retail, and public-sector environments.</p>
         </div>
       </div>
     </div>
+
     <div class="col-md-4">
       <div class="card h-100 shadow-sm">
-        <div class="card-body">
-          <h5>Technical Skills</h5>
-          <p>Excel, SQL, Tableau, HTML, CSS, JavaScript.</p>
+        <div class="card-body text-center">
+          <h5 class="card-title">Technical Skills</h5>
+          <p class="card-text">Excel, SQL, Tableau, HTML, CSS, JavaScript.</p>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<footer class="bg-dark text-white py-3 text-center">
+<!-- FOOTER -->
+<footer class="bg-dark text-white text-center py-3">
   © 2025 Cameron Morrell
 </footer>
 
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
