--- a/scratch.html
+++ b/scratch.html
@@ -5,8 +5,10 @@
   <title>Scratch Page | Cameron Morrell</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="styles.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <a id="top"></a>
@@ -16,8 +18,8 @@
   <p>Demonstrating HTML & CSS from scratch</p>
 
   <nav>
-    <a href="../index.html">Professional Home</a>
-    <a href="../resume.html">Résumé</a>
+    <a href="index.html">Professional Home</a>
+    <a href="resume.html">Résumé</a>
     <a href="app.html">AI Web App</a>
   </nav>
 </header>
@@ -25,6 +27,7 @@
 <div class="section">
   <h2>Interests</h2>
 
+  <!-- NESTED LIST REQUIREMENT -->
   <ol>
     <li>Personal Interests
       <ul>
@@ -40,27 +43,37 @@
     </li>
   </ol>
 
-  <a href="#media">Jump to Media</a>
+  <a href="#media">Jump to Media Section ↓</a>
 </div>
 
 <div class="section" id="media">
   <h2>Media</h2>
 
+  <!-- IMAGE REQUIREMENT -->
   <img src="img/hobby.jpg" alt="Soccer or fitness related image">
 
+  <!-- YOUTUBE EMBED -->
+  <h3>YouTube Video</h3>
   <iframe
-    src="https://www.youtube.com/embed/dQw4w9WgXc"
-    allowfullscreen></iframe>
+    src="https://www.youtube.com/embed/dJlFmxiL11s"
+    allowfullscreen>
+  </iframe>
+
+  <a href="#tableau">Jump to Tableau ↓</a>
 </div>
 
-<div class="section">
+<div class="section" id="tableau">
   <h2>Tableau Visualization</h2>
 
+  <!-- LIVE TABLEAU EMBED -->
   <iframe
     src="https://public.tableau.com/views/RegionalSampleWorkbook/Stocks?:showVizHome=no"
-    width="100%" height="600"></iframe>
+    width="100%"
+    height="600"
+    allowfullscreen>
+  </iframe>
 
-  <a href="#top">Back to top</a>
+  <a href="#top">Back to top ↑</a>
 </div>
 
 <footer>
