--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       Home Depot, and Layton City. Strong interest in analytics, fitness, and soccer.
     </p>
     <a class="btn btn-primary mt-2" href="resume.html">View Résumé</a>
-    <a class="btn btn-outline-primary mt-2 ms-2" href="scratch/index.html">Scratch Page</a>
+    <a class="btn btn-outline-primary mt-2 ms-2" href="scratch.html">Scratch Page</a>
   </div>
 </header>
 
