--- a/scratch.html
+++ b/scratch.html
@@ -20,6 +20,7 @@
   <nav>
     <a href="index.html">Professional Home</a>
     <a href="resume.html">Résumé</a>
+    <a href="scratch.html">Scratch Page</a>
     <a href="app.html">AI Web App</a>
   </nav>
 </header>
@@ -43,14 +44,17 @@
     </li>
   </ol>
 
+  <!-- ON-PAGE ANCHOR -->
   <a href="#media">Jump to Media Section ↓</a>
 </div>
 
 <div class="section" id="media">
   <h2>Media</h2>
 
-  <!-- IMAGE REQUIREMENT -->
-  <img src="img/hobby.jpg" alt="Soccer or fitness related image">
+  <!-- IMAGE (NON-BOOTSTRAP) -->
+  <img
+    src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Fitness.jpg"
+    alt="Fitness related image">
 
   <!-- YOUTUBE EMBED -->
   <h3>YouTube Video</h3>
